cmake_minimum_required(VERSION 3.10)
project(Salam C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Wextra -pedantic -g)

set(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
include_directories(${SRC_DIR})

# file(GLOB_RECURSE SRC_FILES ${SRC_DIR}/*.c)
set(SRC_FILES
    # ---------- START FILES ----------
    src/main.c
    src/stage/ast/ast_alloc/ast_alloc.c
    src/stage/ast/ast_create/ast_create.c
    src/stage/ast/ast_destroy/ast_destroy.c
    src/stage/ast/ast_json/ast_json.c
    src/stage/ast/ast_log/ast_log.c
    src/stage/ast/ast_node_type_name/ast_node_type_name.c
    src/stage/ast/ast_type/ast_type_destroy/ast_type_destroy.c
    src/stage/ast/ast_type/ast_type_direct_destroy/ast_type_direct_destroy.c
    src/stage/ast/ast_type/ast_type_direct_json/ast_type_direct_json.c
    src/stage/ast/ast_type/ast_type_json/ast_type_json.c
    src/stage/ast/asts/ast_argument/ast_argument_item/ast_argument_item_create/ast_argument_item_create.c
    src/stage/ast/asts/ast_argument/ast_argument_item/ast_argument_item_destroy/ast_argument_item_destroy.c
    src/stage/ast/asts/ast_argument/ast_argument_item/ast_argument_item_direct_destroy/ast_argument_item_direct_destroy.c
    src/stage/ast/asts/ast_argument/ast_argument_item/ast_argument_item_direct_json/ast_argument_item_direct_json.c
    src/stage/ast/asts/ast_argument/ast_argument_item/ast_argument_item_json/ast_argument_item_json.c
    src/stage/ast/asts/ast_argument/ast_argument_item/ast_argument_item_log/ast_argument_item_log.c
    src/stage/ast/asts/ast_argument/ast_arguments/ast_arguments_create/ast_arguments_create.c
    src/stage/ast/asts/ast_argument/ast_arguments/ast_arguments_destroy/ast_arguments_destroy.c
    src/stage/ast/asts/ast_argument/ast_arguments/ast_arguments_direct_destroy/ast_arguments_direct_destroy.c
    src/stage/ast/asts/ast_argument/ast_arguments/ast_arguments_direct_json/ast_arguments_direct_json.c
    src/stage/ast/asts/ast_argument/ast_arguments/ast_arguments_json/ast_arguments_json.c
    src/stage/ast/asts/ast_argument/ast_arguments/ast_arguments_log/ast_arguments_log.c
    src/stage/ast/asts/ast_attribute/ast_attribute_item/ast_attribute_item_create/ast_attribute_item_create.c
    src/stage/ast/asts/ast_attribute/ast_attribute_item/ast_attribute_item_destroy/ast_attribute_item_destroy.c
    src/stage/ast/asts/ast_attribute/ast_attribute_item/ast_attribute_item_direct_destroy/ast_attribute_item_direct_destroy.c
    src/stage/ast/asts/ast_attribute/ast_attribute_item/ast_attribute_item_direct_json/ast_attribute_item_direct_json.c
    src/stage/ast/asts/ast_attribute/ast_attribute_item/ast_attribute_item_json/ast_attribute_item_json.c
    src/stage/ast/asts/ast_attribute/ast_attribute_item/ast_attribute_item_log/ast_attribute_item_log.c
    src/stage/ast/asts/ast_attribute/ast_attributes/ast_attributes_create/ast_attributes_create.c
    src/stage/ast/asts/ast_attribute/ast_attributes/ast_attributes_destroy/ast_attributes_destroy.c
    src/stage/ast/asts/ast_attribute/ast_attributes/ast_attributes_direct_destroy/ast_attributes_direct_destroy.c
    src/stage/ast/asts/ast_attribute/ast_attributes/ast_attributes_direct_json/ast_attributes_direct_json.c
    src/stage/ast/asts/ast_attribute/ast_attributes/ast_attributes_json/ast_attributes_json.c
    src/stage/ast/asts/ast_attribute/ast_attributes/ast_attributes_log/ast_attributes_log.c
    src/stage/ast/asts/ast_block/ast_block_create/ast_block_create.c
    src/stage/ast/asts/ast_block/ast_block_destroy/ast_block_destroy.c
    src/stage/ast/asts/ast_block/ast_block_direct_destroy/ast_block_direct_destroy.c
    src/stage/ast/asts/ast_block/ast_block_direct_json/ast_block_direct_json.c
    src/stage/ast/asts/ast_block/ast_block_json/ast_block_json.c
    src/stage/ast/asts/ast_block/ast_block_log/ast_block_log.c
    src/stage/ast/asts/ast_expression/ast_expression_binary/ast_expression_binary_create/ast_expression_binary_create.c
    src/stage/ast/asts/ast_expression/ast_expression_binary/ast_expression_binary_destroy/ast_expression_binary_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_binary/ast_expression_binary_direct_destroy/ast_expression_binary_direct_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_binary/ast_expression_binary_direct_json/ast_expression_binary_direct_json.c
    src/stage/ast/asts/ast_expression/ast_expression_binary/ast_expression_binary_json/ast_expression_binary_json.c
    src/stage/ast/asts/ast_expression/ast_expression_binary/ast_expression_binary_log/ast_expression_binary_log.c
    src/stage/ast/asts/ast_expression/ast_expression_call/ast_expression_call_create/ast_expression_call_create.c
    src/stage/ast/asts/ast_expression/ast_expression_call/ast_expression_call_destroy/ast_expression_call_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_call/ast_expression_call_direct_destroy/ast_expression_call_direct_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_call/ast_expression_call_direct_json/ast_expression_call_direct_json.c
    src/stage/ast/asts/ast_expression/ast_expression_call/ast_expression_call_json/ast_expression_call_json.c
    src/stage/ast/asts/ast_expression/ast_expression_call/ast_expression_call_log/ast_expression_call_log.c
    src/stage/ast/asts/ast_expression/ast_expression_identifier/ast_expression_identifier_create/ast_expression_identifier_create.c
    src/stage/ast/asts/ast_expression/ast_expression_identifier/ast_expression_identifier_destroy/ast_expression_identifier_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_identifier/ast_expression_identifier_direct_destroy/ast_expression_identifier_direct_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_identifier/ast_expression_identifier_direct_json/ast_expression_identifier_direct_json.c
    src/stage/ast/asts/ast_expression/ast_expression_identifier/ast_expression_identifier_json/ast_expression_identifier_json.c
    src/stage/ast/asts/ast_expression/ast_expression_identifier/ast_expression_identifier_log/ast_expression_identifier_log.c
    src/stage/ast/asts/ast_expression/ast_expression_index/ast_expression_index_create/ast_expression_index_create.c
    src/stage/ast/asts/ast_expression/ast_expression_index/ast_expression_index_destroy/ast_expression_index_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_index/ast_expression_index_direct_destroy/ast_expression_index_direct_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_index/ast_expression_index_direct_json/ast_expression_index_direct_json.c
    src/stage/ast/asts/ast_expression/ast_expression_index/ast_expression_index_json/ast_expression_index_json.c
    src/stage/ast/asts/ast_expression/ast_expression_index/ast_expression_index_log/ast_expression_index_log.c
    src/stage/ast/asts/ast_expression/ast_expression_item/ast_expression_item_create/ast_expression_item_create.c
    src/stage/ast/asts/ast_expression/ast_expression_item/ast_expression_item_destroy/ast_expression_item_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_item/ast_expression_item_direct_destroy/ast_expression_item_direct_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_item/ast_expression_item_direct_json/ast_expression_item_direct_json.c
    src/stage/ast/asts/ast_expression/ast_expression_item/ast_expression_item_json/ast_expression_item_json.c
    src/stage/ast/asts/ast_expression/ast_expression_item/ast_expression_item_log/ast_expression_item_log.c
    src/stage/ast/asts/ast_expression/ast_expression_literal/ast_expression_literal_create/ast_expression_literal_create.c
    src/stage/ast/asts/ast_expression/ast_expression_literal/ast_expression_literal_destroy/ast_expression_literal_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_literal/ast_expression_literal_direct_destroy/ast_expression_literal_direct_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_literal/ast_expression_literal_direct_json/ast_expression_literal_direct_json.c
    src/stage/ast/asts/ast_expression/ast_expression_literal/ast_expression_literal_json/ast_expression_literal_json.c
    src/stage/ast/asts/ast_expression/ast_expression_literal/ast_expression_literal_log/ast_expression_literal_log.c
    src/stage/ast/asts/ast_expression/ast_expression_type_name/ast_expression_type_name.c
    src/stage/ast/asts/ast_expression/ast_expression_unary/ast_expression_unary_create/ast_expression_unary_create.c
    src/stage/ast/asts/ast_expression/ast_expression_unary/ast_expression_unary_destroy/ast_expression_unary_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_unary/ast_expression_unary_direct_destroy/ast_expression_unary_direct_destroy.c
    src/stage/ast/asts/ast_expression/ast_expression_unary/ast_expression_unary_direct_json/ast_expression_unary_direct_json.c
    src/stage/ast/asts/ast_expression/ast_expression_unary/ast_expression_unary_json/ast_expression_unary_json.c
    src/stage/ast/asts/ast_expression/ast_expression_unary/ast_expression_unary_log/ast_expression_unary_log.c
    src/stage/ast/asts/ast_expression/ast_expressions/ast_expressions_create/ast_expressions_create.c
    src/stage/ast/asts/ast_expression/ast_expressions/ast_expressions_destroy/ast_expressions_destroy.c
    src/stage/ast/asts/ast_expression/ast_expressions/ast_expressions_direct_destroy/ast_expressions_direct_destroy.c
    src/stage/ast/asts/ast_expression/ast_expressions/ast_expressions_direct_json/ast_expressions_direct_json.c
    src/stage/ast/asts/ast_expression/ast_expressions/ast_expressions_json/ast_expressions_json.c
    src/stage/ast/asts/ast_expression/ast_expressions/ast_expressions_log/ast_expressions_log.c
    src/stage/ast/asts/ast_extern/ast_extern_decl/ast_extern_decl_create/ast_extern_decl_create.c
    src/stage/ast/asts/ast_extern/ast_extern_decl/ast_extern_decl_destroy/ast_extern_decl_destroy.c
    src/stage/ast/asts/ast_extern/ast_extern_decl/ast_extern_decl_direct_destroy/ast_extern_decl_direct_destroy.c
    src/stage/ast/asts/ast_extern/ast_extern_decl/ast_extern_decl_direct_json/ast_extern_decl_direct_json.c
    src/stage/ast/asts/ast_extern/ast_extern_decl/ast_extern_decl_json/ast_extern_decl_json.c
    src/stage/ast/asts/ast_extern/ast_extern_decl/ast_extern_decl_log/ast_extern_decl_log.c
    src/stage/ast/asts/ast_extern/ast_extern_function/ast_extern_function_create/ast_extern_function_create.c
    src/stage/ast/asts/ast_extern/ast_extern_function/ast_extern_function_destroy/ast_extern_function_destroy.c
    src/stage/ast/asts/ast_extern/ast_extern_function/ast_extern_function_direct_destroy/ast_extern_function_direct_destroy.c
    src/stage/ast/asts/ast_extern/ast_extern_function/ast_extern_function_direct_json/ast_extern_function_direct_json.c
    src/stage/ast/asts/ast_extern/ast_extern_function/ast_extern_function_json/ast_extern_function_json.c
    src/stage/ast/asts/ast_extern/ast_extern_function/ast_extern_function_log/ast_extern_function_log.c
    src/stage/ast/asts/ast_extern/ast_extern_type_name/ast_extern_type_name.c
    src/stage/ast/asts/ast_extern/ast_extern_variable/ast_extern_variable_create/ast_extern_variable_create.c
    src/stage/ast/asts/ast_extern/ast_extern_variable/ast_extern_variable_destroy/ast_extern_variable_destroy.c
    src/stage/ast/asts/ast_extern/ast_extern_variable/ast_extern_variable_direct_destroy/ast_extern_variable_direct_destroy.c
    src/stage/ast/asts/ast_extern/ast_extern_variable/ast_extern_variable_direct_json/ast_extern_variable_direct_json.c
    src/stage/ast/asts/ast_extern/ast_extern_variable/ast_extern_variable_json/ast_extern_variable_json.c
    src/stage/ast/asts/ast_extern/ast_extern_variable/ast_extern_variable_log/ast_extern_variable_log.c
    src/stage/ast/asts/ast_function_decl/ast_function_decl_create/ast_function_decl_create.c
    src/stage/ast/asts/ast_function_decl/ast_function_decl_destroy/ast_function_decl_destroy.c
    src/stage/ast/asts/ast_function_decl/ast_function_decl_direct_destroy/ast_function_decl_direct_destroy.c
    src/stage/ast/asts/ast_function_decl/ast_function_decl_direct_json/ast_function_decl_direct_json.c
    src/stage/ast/asts/ast_function_decl/ast_function_decl_json/ast_function_decl_json.c
    src/stage/ast/asts/ast_function_decl/ast_function_decl_log/ast_function_decl_log.c
    src/stage/ast/asts/ast_import/ast_import_create/ast_import_create.c
    src/stage/ast/asts/ast_import/ast_import_destroy/ast_import_destroy.c
    src/stage/ast/asts/ast_import/ast_import_direct_destroy/ast_import_direct_destroy.c
    src/stage/ast/asts/ast_import/ast_import_direct_json/ast_import_direct_json.c
    src/stage/ast/asts/ast_import/ast_import_json/ast_import_json.c
    src/stage/ast/asts/ast_import/ast_import_log/ast_import_log.c
    src/stage/ast/asts/ast_kind/ast_kind_decl/ast_kind_decl_create/ast_kind_decl_create.c
    src/stage/ast/asts/ast_kind/ast_kind_decl/ast_kind_decl_destroy/ast_kind_decl_destroy.c
    src/stage/ast/asts/ast_kind/ast_kind_decl/ast_kind_decl_direct_destroy/ast_kind_decl_direct_destroy.c
    src/stage/ast/asts/ast_kind/ast_kind_decl/ast_kind_decl_direct_json/ast_kind_decl_direct_json.c
    src/stage/ast/asts/ast_kind/ast_kind_decl/ast_kind_decl_json/ast_kind_decl_json.c
    src/stage/ast/asts/ast_kind/ast_kind_decl/ast_kind_decl_log/ast_kind_decl_log.c
    src/stage/ast/asts/ast_kind/ast_kind_decl/ast_kind_decl_type_name/ast_kind_decl_type_name.c
    src/stage/ast/asts/ast_kind/ast_kind_enum/ast_kind_enum_create/ast_kind_enum_create.c
    src/stage/ast/asts/ast_kind/ast_kind_enum/ast_kind_enum_destroy/ast_kind_enum_destroy.c
    src/stage/ast/asts/ast_kind/ast_kind_enum/ast_kind_enum_direct_destroy/ast_kind_enum_direct_destroy.c
    src/stage/ast/asts/ast_kind/ast_kind_enum/ast_kind_enum_direct_json/ast_kind_enum_direct_json.c
    src/stage/ast/asts/ast_kind/ast_kind_enum/ast_kind_enum_json/ast_kind_enum_json.c
    src/stage/ast/asts/ast_kind/ast_kind_enum/ast_kind_enum_log/ast_kind_enum_log.c
    src/stage/ast/asts/ast_kind/ast_kind_struct/ast_kind_struct_create/ast_kind_struct_create.c
    src/stage/ast/asts/ast_kind/ast_kind_struct/ast_kind_struct_destroy/ast_kind_struct_destroy.c
    src/stage/ast/asts/ast_kind/ast_kind_struct/ast_kind_struct_direct_destroy/ast_kind_struct_direct_destroy.c
    src/stage/ast/asts/ast_kind/ast_kind_struct/ast_kind_struct_direct_json/ast_kind_struct_direct_json.c
    src/stage/ast/asts/ast_kind/ast_kind_struct/ast_kind_struct_json/ast_kind_struct_json.c
    src/stage/ast/asts/ast_kind/ast_kind_struct/ast_kind_struct_log/ast_kind_struct_log.c
    src/stage/ast/asts/ast_kind/ast_kind_union/ast_kind_union_create/ast_kind_union_create.c
    src/stage/ast/asts/ast_kind/ast_kind_union/ast_kind_union_destroy/ast_kind_union_destroy.c
    src/stage/ast/asts/ast_kind/ast_kind_union/ast_kind_union_direct_destroy/ast_kind_union_direct_destroy.c
    src/stage/ast/asts/ast_kind/ast_kind_union/ast_kind_union_direct_json/ast_kind_union_direct_json.c
    src/stage/ast/asts/ast_kind/ast_kind_union/ast_kind_union_json/ast_kind_union_json.c
    src/stage/ast/asts/ast_kind/ast_kind_union/ast_kind_union_log/ast_kind_union_log.c
    src/stage/ast/asts/ast_package/ast_package_create/ast_package_create.c
    src/stage/ast/asts/ast_package/ast_package_destroy/ast_package_destroy.c
    src/stage/ast/asts/ast_package/ast_package_direct_destroy/ast_package_direct_destroy.c
    src/stage/ast/asts/ast_package/ast_package_direct_json/ast_package_direct_json.c
    src/stage/ast/asts/ast_package/ast_package_json/ast_package_json.c
    src/stage/ast/asts/ast_package/ast_package_log/ast_package_log.c
    src/stage/ast/asts/ast_parameter/ast_parameter_item/ast_parameter_item_create/ast_parameter_item_create.c
    src/stage/ast/asts/ast_parameter/ast_parameter_item/ast_parameter_item_destroy/ast_parameter_item_destroy.c
    src/stage/ast/asts/ast_parameter/ast_parameter_item/ast_parameter_item_direct_destroy/ast_parameter_item_direct_destroy.c
    src/stage/ast/asts/ast_parameter/ast_parameter_item/ast_parameter_item_direct_json/ast_parameter_item_direct_json.c
    src/stage/ast/asts/ast_parameter/ast_parameter_item/ast_parameter_item_json/ast_parameter_item_json.c
    src/stage/ast/asts/ast_parameter/ast_parameter_item/ast_parameter_item_log/ast_parameter_item_log.c
    src/stage/ast/asts/ast_parameter/ast_parameters/ast_parameters_create/ast_parameters_create.c
    src/stage/ast/asts/ast_parameter/ast_parameters/ast_parameters_destroy/ast_parameters_destroy.c
    src/stage/ast/asts/ast_parameter/ast_parameters/ast_parameters_direct_destroy/ast_parameters_direct_destroy.c
    src/stage/ast/asts/ast_parameter/ast_parameters/ast_parameters_direct_json/ast_parameters_direct_json.c
    src/stage/ast/asts/ast_parameter/ast_parameters/ast_parameters_json/ast_parameters_json.c
    src/stage/ast/asts/ast_parameter/ast_parameters/ast_parameters_log/ast_parameters_log.c
    src/stage/ast/asts/ast_program/ast_program_create/ast_program_create.c
    src/stage/ast/asts/ast_program/ast_program_destroy/ast_program_destroy.c
    src/stage/ast/asts/ast_program/ast_program_direct_destroy/ast_program_direct_destroy.c
    src/stage/ast/asts/ast_program/ast_program_direct_json/ast_program_direct_json.c
    src/stage/ast/asts/ast_program/ast_program_json/ast_program_json.c
    src/stage/ast/asts/ast_program/ast_program_log/ast_program_log.c
    src/stage/ast/asts/ast_statement/ast_statement_expression/ast_statement_expression_create/ast_statement_expression_create.c
    src/stage/ast/asts/ast_statement/ast_statement_expression/ast_statement_expression_destroy/ast_statement_expression_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_expression/ast_statement_expression_direct_destroy/ast_statement_expression_direct_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_expression/ast_statement_expression_direct_json/ast_statement_expression_direct_json.c
    src/stage/ast/asts/ast_statement/ast_statement_expression/ast_statement_expression_json/ast_statement_expression_json.c
    src/stage/ast/asts/ast_statement/ast_statement_expression/ast_statement_expression_log/ast_statement_expression_log.c
    src/stage/ast/asts/ast_statement/ast_statement_for/ast_statement_for_create/ast_statement_for_create.c
    src/stage/ast/asts/ast_statement/ast_statement_for/ast_statement_for_destroy/ast_statement_for_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_for/ast_statement_for_direct_destroy/ast_statement_for_direct_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_for/ast_statement_for_direct_json/ast_statement_for_direct_json.c
    src/stage/ast/asts/ast_statement/ast_statement_for/ast_statement_for_json/ast_statement_for_json.c
    src/stage/ast/asts/ast_statement/ast_statement_for/ast_statement_for_log/ast_statement_for_log.c
    src/stage/ast/asts/ast_statement/ast_statement_foreach/ast_statement_foreach_create/ast_statement_foreach_create.c
    src/stage/ast/asts/ast_statement/ast_statement_foreach/ast_statement_foreach_destroy/ast_statement_foreach_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_foreach/ast_statement_foreach_direct_destroy/ast_statement_foreach_direct_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_foreach/ast_statement_foreach_direct_json/ast_statement_foreach_direct_json.c
    src/stage/ast/asts/ast_statement/ast_statement_foreach/ast_statement_foreach_json/ast_statement_foreach_json.c
    src/stage/ast/asts/ast_statement/ast_statement_foreach/ast_statement_foreach_log/ast_statement_foreach_log.c
    src/stage/ast/asts/ast_statement/ast_statement_if/ast_statement_if_create/ast_statement_if_create.c
    src/stage/ast/asts/ast_statement/ast_statement_if/ast_statement_if_destroy/ast_statement_if_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_if/ast_statement_if_direct_destroy/ast_statement_if_direct_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_if/ast_statement_if_direct_json/ast_statement_if_direct_json.c
    src/stage/ast/asts/ast_statement/ast_statement_if/ast_statement_if_json/ast_statement_if_json.c
    src/stage/ast/asts/ast_statement/ast_statement_if/ast_statement_if_log/ast_statement_if_log.c
    src/stage/ast/asts/ast_statement/ast_statement_print/ast_statement_print_create/ast_statement_print_create.c
    src/stage/ast/asts/ast_statement/ast_statement_print/ast_statement_print_destroy/ast_statement_print_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_print/ast_statement_print_direct_destroy/ast_statement_print_direct_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_print/ast_statement_print_direct_json/ast_statement_print_direct_json.c
    src/stage/ast/asts/ast_statement/ast_statement_print/ast_statement_print_json/ast_statement_print_json.c
    src/stage/ast/asts/ast_statement/ast_statement_print/ast_statement_print_log/ast_statement_print_log.c
    src/stage/ast/asts/ast_statement/ast_statement_return/ast_statement_return_create/ast_statement_return_create.c
    src/stage/ast/asts/ast_statement/ast_statement_return/ast_statement_return_destroy/ast_statement_return_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_return/ast_statement_return_direct_destroy/ast_statement_return_direct_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_return/ast_statement_return_direct_json/ast_statement_return_direct_json.c
    src/stage/ast/asts/ast_statement/ast_statement_return/ast_statement_return_json/ast_statement_return_json.c
    src/stage/ast/asts/ast_statement/ast_statement_return/ast_statement_return_log/ast_statement_return_log.c
    src/stage/ast/asts/ast_statement/ast_statement_variable_decl/ast_statement_variable_decl_create/ast_statement_variable_decl_create.c
    src/stage/ast/asts/ast_statement/ast_statement_variable_decl/ast_statement_variable_decl_destroy/ast_statement_variable_decl_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_variable_decl/ast_statement_variable_decl_direct_destroy/ast_statement_variable_decl_direct_destroy.c
    src/stage/ast/asts/ast_statement/ast_statement_variable_decl/ast_statement_variable_decl_direct_json/ast_statement_variable_decl_direct_json.c
    src/stage/ast/asts/ast_statement/ast_statement_variable_decl/ast_statement_variable_decl_json/ast_statement_variable_decl_json.c
    src/stage/ast/asts/ast_statement/ast_statement_variable_decl/ast_statement_variable_decl_log/ast_statement_variable_decl_log.c
    src/stage/ast/asts/ast_variable_decl/ast_variable_decl_create/ast_variable_decl_create.c
    src/stage/ast/asts/ast_variable_decl/ast_variable_decl_destroy/ast_variable_decl_destroy.c
    src/stage/ast/asts/ast_variable_decl/ast_variable_decl_direct_destroy/ast_variable_decl_direct_destroy.c
    src/stage/ast/asts/ast_variable_decl/ast_variable_decl_direct_json/ast_variable_decl_direct_json.c
    src/stage/ast/asts/ast_variable_decl/ast_variable_decl_json/ast_variable_decl_json.c
    src/stage/ast/asts/ast_variable_decl/ast_variable_decl_log/ast_variable_decl_log.c
    src/stage/generator/generator_c/generator_c_block/generator_c_block.c
    src/stage/generator/generator_c/generator_c_code/generator_c_code.c
    src/stage/generator/generator_c/generator_c_function_decl/generator_c_function_decl.c
    src/stage/generator/generator_c/generator_c_ident/generator_c_ident.c
    src/stage/generator/generator_c/generator_c_node/generator_c_node.c
    src/stage/generator/generator_c/generator_c_program/generator_c_program.c
    src/stage/generator/generator_c/generator_c_statement/generator_c_statement_print/generator_c_statement_print.c
    src/stage/generator/generator_c/generator_c_statement/generator_c_statement_ret/generator_c_statement_ret.c
    src/stage/generator/generator_c/generator_c_type/generator_c_type.c
    src/stage/generator/generator_c/generator_c_variable_decl/generator_c_variable_decl.c
    src/stage/generator/generator_create/generator_create.c
    src/stage/generator/generator_destroy/generator_destroy.c
    src/stage/parser/parser_create/parser_create.c
    src/stage/parser/parser_destroy/parser_destroy.c
    src/stage/parser/parser_eat/parser_eat.c
    src/stage/parser/parser_expect/parser_expect.c
    src/stage/parser/parser_expect_get/parser_expect_get.c
    src/stage/parser/parser_has/parser_has.c
    src/stage/parser/parser_json/parser_json.c
    src/stage/parser/parser_log/parser_log.c
    src/stage/parser/parser_next/parser_next.c
    src/stage/parser/parser_operator_expect/parser_operator_expect.c
    src/stage/parser/parser_parse/parser_parse_all/parser_parse_all.c
    src/stage/parser/parser_parse/parser_parse_arguments/parser_parse_arguments.c
    src/stage/parser/parser_parse/parser_parse_block/parser_parse_block.c
    src/stage/parser/parser_parse/parser_parse_expression_item/parser_parse_expression_item.c
    src/stage/parser/parser_parse/parser_parse_expressions/parser_parse_expressions.c
    src/stage/parser/parser_parse/parser_parse_function_decl/parser_parse_function_decl.c
    src/stage/parser/parser_parse/parser_parse_node/parser_parse_node.c
    src/stage/parser/parser_parse/parser_parse_parameters/parser_parse_parameters.c
    src/stage/parser/parser_parse/parser_parse_statement/parser_parse_statement.c
    src/stage/parser/parser_parse/parser_parse_statement_print/parser_parse_statement_print.c
    src/stage/parser/parser_parse/parser_parse_statement_return/parser_parse_statement_return.c
    src/stage/parser/parser_prev/parser_prev.c
    src/stage/parser/parser_skip/parser_skip.c
    src/stage/scanner/scanner_create/scanner_create.c
    src/stage/scanner/scanner_destroy/scanner_destroy.c
    src/stage/scanner/scanner_error/scanner_error.c
    src/stage/scanner/scanner_json/scanner_json.c
    src/stage/scanner/scanner_log/scanner_log.c
    src/stage/scanner/scanner_scan/scanner_scan.c
    src/stage/scanner/scanner_scan_comment_inline/scanner_scan_comment_inline.c
    src/stage/scanner/scanner_scan_comment_multiline/scanner_scan_comment_multiline.c
    src/stage/scanner/scanner_scan_identifier/scanner_scan_identifier.c
    src/stage/scanner/scanner_scan_number/scanner_scan_number.c
    src/stage/scanner/scanner_scan_string/scanner_scan_string.c
    src/stage/scanner/scanner_set/scanner_set.c
    src/stage/token/token_char_type/token_char_type.c
    src/stage/token/token_create/token_create.c
    src/stage/token/token_free/token_free.c
    src/stage/token/token_json/token_json.c
    src/stage/token/token_keyword_type/token_keyword_type.c
    src/stage/token/token_location_json/token_location_json.c
    src/stage/token/token_log/token_log.c
    src/stage/token/token_name/token_name.c
    src/stage/token/token_operator_keyword_type/token_operator_keyword_type.c
    src/stage/token/token_operator_name/token_operator_name.c
    src/stage/token/token_operator_type/token_operator_type.c
    src/stage/token/token_type/token_type.c
    src/stage/value/value_create/value_create.c
    src/stage/value/value_destroy/value_destroy.c
    src/stage/value/value_json/value_json.c
    src/stage/value/value_log/value_log.c
    src/stage/value/value_name/value_name.c
    src/utility/array/array_append/array_append.c
    src/utility/array/array_create/array_create.c
    src/utility/array/array_delete/array_delete.c
    src/utility/array/array_destroy/array_destroy.c
    src/utility/array/array_get/array_get.c
    src/utility/array/array_prepend/array_prepend.c
    src/utility/array/array_resize/array_resize.c
    src/utility/array/array_size/array_size.c
    src/utility/buffer/buffer_append/buffer_append.c
    src/utility/buffer/buffer_append_char/buffer_append_char.c
    src/utility/buffer/buffer_append_char_begin/buffer_append_char_begin.c
    src/utility/buffer/buffer_append_str/buffer_append_str.c
    src/utility/buffer/buffer_append_str_begin/buffer_append_str_begin.c
    src/utility/buffer/buffer_append_wchar/buffer_append_wchar.c
    src/utility/buffer/buffer_compare/buffer_compare.c
    src/utility/buffer/buffer_create/buffer_create.c
    src/utility/buffer/buffer_destroy/buffer_destroy.c
    src/utility/buffer/buffer_destroy_and_get/buffer_destroy_and_get.c
    src/utility/buffer/buffer_equals/buffer_equals.c
    src/utility/buffer/buffer_is/buffer_is.c
    src/utility/buffer/buffer_lower_str/buffer_lower_str.c
    src/utility/buffer/buffer_print/buffer_print.c
    src/utility/buffer/buffer_set/buffer_set.c
    src/utility/buffer/buffer_set_str/buffer_set_str.c
    src/utility/buffer/buffer_upper_str/buffer_upper_str.c
    src/utility/convert/convert_double2string/convert_double2string.c
    src/utility/convert/convert_float2string/convert_float2string.c
    src/utility/convert/convert_int2string/convert_int2string.c
    src/utility/convert/convert_size2string/convert_size2string.c
    src/utility/file/file_append/file_append.c
    src/utility/file/file_create/file_create.c
    src/utility/file/file_delete/file_delete.c
    src/utility/file/file_exists/file_exists.c
    src/utility/file/file_reads/file_reads.c
    src/utility/file/file_size/file_size.c
    src/utility/file/file_write/file_write.c
    src/utility/hashmap/hashmap_create/hashmap_create.c
    src/utility/hashmap/hashmap_destroy/hashmap_destroy.c
    src/utility/hashmap/hashmap_put/hashmap_put.c
    src/utility/hashmap/hashmap_remove/hashmap_remove.c
    src/utility/hashmap/hashmap_size/hashmap_size.c
    src/utility/io/io_directory/io_directory.c
    src/utility/log/log_error/log_error.c
    src/utility/log/log_fatal/log_fatal.c
    src/utility/log/log_info/log_info.c
    src/utility/memory/memory_allocation/memory_allocation.c
    src/utility/memory/memory_allocation_soft/memory_allocation_soft.c
    src/utility/memory/memory_calloc/memory_calloc.c
    src/utility/memory/memory_copy/memory_copy.c
    src/utility/memory/memory_destroy/memory_destroy.c
    src/utility/memory/memory_move/memory_move.c
    src/utility/memory/memory_realloc/memory_realloc.c
    src/utility/memory/memory_set/memory_set.c
    src/utility/string/string_arabic2persian/string_arabic2persian.c
    src/utility/string/string_char_is_alnum/string_char_is_alnum.c
    src/utility/string/string_char_is_alpha/string_char_is_alpha.c
    src/utility/string/string_char_is_digit/string_char_is_digit.c
    src/utility/string/string_compare/string_compare.c
    src/utility/string/string_convert_utf8_to_english_digit/string_convert_utf8_to_english_digit.c
    src/utility/string/string_duplicate/string_duplicate.c
    src/utility/string/string_ends/string_ends.c
    src/utility/string/string_escaping/string_escaping.c
    src/utility/string/string_hash/string_hash.c
    src/utility/string/string_length/string_length.c
    src/utility/string/string_replace_all/string_replace_all.c
    src/utility/string/string_replace_all_substrings/string_replace_all_substrings.c
    src/utility/string/string_starts/string_starts.c
    src/utility/utf8/utf8_char_decode/utf8_char_decode.c
    src/utility/utf8/utf8_char_length/utf8_char_length.c
    src/utility/utf8/utf8_decode/utf8_decode.c
    src/utility/utf8/utf8_is_alpha/utf8_is_alpha.c
    src/utility/utf8/utf8_is_continuation_byte/utf8_is_continuation_byte.c
    src/utility/utf8/utf8_is_digit/utf8_is_digit.c
    src/utility/utf8/utf8_is_valid/utf8_is_valid.c
    src/utility/utf8/utf8_strlen/utf8_strlen.c
    # ---------- END FILES ----------
)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_executable(salam ${SRC_FILES})

add_custom_command(
    OUTPUT salam.bin
    COMMAND ${CMAKE_OBJCOPY} -O binary salam salam.bin
    DEPENDS salam
    COMMENT "Generating salam.bin from executable"
)

add_custom_target(bin ALL DEPENDS salam.bin)

add_custom_target(test
    COMMAND ${CMAKE_BINARY_DIR}/salam ${SRC_DIR}/input.salam
    DEPENDS salam
    COMMENT "Running salam with input.salam"
)
