[project]
name = "salam"
version = "0.2.2"
requires-python = ">=3.13"

[tool.codespell]
ignore-words = ".github/linters/codespell.txt"
skip = "runner/worker-configuration.d.ts,*.lock,package-lock.json,pnpm-lock.yaml,*.min.js,*.map,*.svg,compiler/tests/en/general/modpkg.salam,compiler/tests/en/general/_modlib.salam"

[tool.mypy]
exclude = "^benchmark/programs/"
